--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -55,6 +55,32 @@
       </div>
       <div class="panel-body">
         <div class="dataTable_wrapper">
+          <% if @admin_order.line_items.first.product_type.present? %>
+           <table width="100%" class="table table-striped table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th data-orderable="false">ID</th>
+                    <th data-orderable="false">Item Name</th>
+                    <th data-orderable="false">Quantity</th>
+                    <th data-orderable="false">Price per piece</th>
+                    <th data-orderable="false">Total amount</th>
+                </tr>
+            </thead>
+            <tbody>
+              <% @admin_order.line_items.each_with_index do |line_item,index| %>
+                <tr class="odd gradeX">
+                  <td><%= index+1 %></td> 
+                  <!-- <td><%#= line_item.id %></td> -->
+                  <td><%= line_item.product.name %></td>
+                  <td><%= line_item.than %></td>
+                  <td><%= line_item.price_per_meter %></td>
+                  <td><%= line_item.line_total %></td>
+                </tr>
+              <%end%>  
+              </div>                                                                           
+            </tbody>
+          </table>
+          <% else %>
           <table width="100%" class="table table-striped table-bordered table-hover">
             <thead>
                 <tr>
@@ -86,6 +112,7 @@
               </div>                                                                           
             </tbody>
           </table>
+          <% end %>
         </div>
       </div>
     </div>
