--- a/app/views/admin/clients/show.html.erb
+++ b/app/views/admin/clients/show.html.erb
@@ -10,7 +10,7 @@
                     </div>
                     <div class="col-xs-9 text-right">
                         <div class="huge"><%= @admin_client.orders.count %></div>
-                        <div>Orders By <%= @admin_client.name %></div>
+                        <div>Orders By <%= @admin_client.try(:name) %></div>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h1 class="page-header"><%= @admin_client.name %> Orders</h1>
+    <h1 class="page-header"><%= @admin_client.try(:name) %> Orders</h1>
   </div>
   
 </div>
@@ -49,7 +49,7 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <%= @admin_client.name %> Orders
+        <%= @admin_client.try(:name) %> Orders
         <%#= link_to '<i class="fa fa-plus"></i> Add New client'.html_safe, new_admin_product_path, class: "btn btn-default pull-right add-btn" %>
       </div>
       <div class="panel-body">
