--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Sayed Cloth House</a>
+        <a class="navbar-brand" href="#">Saeed Cloth House</a>
     </div>
     <!-- /.navbar-header -->
 
