--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -48,11 +48,7 @@
 </div>
 <div class="row print-area">
   <div class="col-lg-12">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        Orders
-        <%#= link_to '<i class="fa fa-plus"></i> Add New client'.html_safe, new_admin_product_path, class: "btn btn-default pull-right add-btn" %>
-      </div>
+   
       <div class="panel-body">
         <div class="dataTable_wrapper">
           <% if @admin_order.line_items.first.product_type.present? %>
@@ -117,7 +113,6 @@
       </div>
     </div>
   </div>
-</div>
 <div class="">
   <table class="table table-bordered rightTable grand_total_print">
       <tbody>
@@ -150,9 +145,9 @@
   </div>
 </div>
 <style type="text/css">
-table, tr, td {
+/*table, tr, td {
     font-size: 16px;
-}
+}*/
 table, tr, td {
     border: none;
 }
@@ -200,6 +195,9 @@ table, tr, td {
   }
   body * {
     visibility: hidden;
+  }
+  body td {
+    font-size: 24px;
   }
   .sub_header * {
     visibility: visible;
