--- a/app/views/admin/payments/index.html.erb
+++ b/app/views/admin/payments/index.html.erb
@@ -24,7 +24,7 @@
 <div class="row prinTable">
   <div class="col-lg-12">
       
-      <div class="panel-body">
+      <!-- <div class="panel-body"> -->
         
         <div class="dataTable_wrapper">
           <table width="100%" class="table  table-bordered table-hover" id="dataTables-example">
@@ -85,7 +85,7 @@
             </tbody>
           </table>
         </div>
-      </div>
+      <!-- </div> -->
   </div>
 </div>
 <div class="">
